--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Accueil - Portfolio Développeur Web</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Bienvenue sur mon Portfolio</h1>
+    <p>Développeur Web Full Stack</p>
+  </header>
 
+  <nav>
+    <ul>
+      <li><a href="parcours.html">Parcours</a></li>
+      <li><a href="competences.html">Compétences</a></li>
+      <li><a href="projets.html">Projets</a></li>
+    </ul>
+  </nav>
+</body>
+</html>
+📄 parcours.html
+html
+Copier
+Modifier
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Parcours</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Mon Parcours</h1>
+    <nav><a href="index.html">← Retour</a></nav>
+  </header>
+
+  <section>
+    <p>Passionné par le développement web, j’ai étudié l'informatique et travaillé sur plusieurs projets en freelance et en entreprise...</p>
+  </section>
+</body>
+</html>
