--- a/Projets.html
+++ b/Projets.html
@@ -1,1 +1,32 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Mes Projets</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Mes Projets</h1>
+    <nav><a href="index.html">← Retour</a></nav>
+  </header>
 
+  <section class="projets-container">
+    <div class="projet">
+      <img src="https://via.placeholder.com/300x200" alt="Projet 1">
+      <div class="overlay">
+        <h3>Blog PHP</h3>
+        <p>Site dynamique avec MySQL/PHP.</p>
+      </div>
+    </div>
+
+    <div class="projet">
+      <img src="https://via.placeholder.com/300x200" alt="Projet 2">
+      <div class="overlay">
+        <h3>Portfolio JS</h3>
+        <p>Animations en JavaScript natif.</p>
+      </div>
+    </div>
+  </section>
+</body>
+</html>
