--- a/parcours.html
+++ b/parcours.html
@@ -1,1 +1,18 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <title>Parcours</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <header>
+    <h1>Mon Parcours</h1>
+    <nav><a href="index.html">← Retour</a></nav>
+  </header>
 
+  <section>
+    <p>Passionné par le développement web, j’ai étudié l'informatique et travaillé sur plusieurs projets en freelance et en entreprise...</p>
+  </section>
+</body>
+</html>
