--- a/Projets.html
+++ b/Projets.html
@@ -13,18 +13,24 @@
 
   <section class="projets-container">
     <div class="projet">
-      <img src="https://via.placeholder.com/300x200" alt="Projet 1">
+      <img src="#" alt="Projet jeu ">
       <div class="overlay">
-        <h3>Blog PHP</h3>
-        <p>Site dynamique avec MySQL/PHP.</p>
+        <h3> monbre de 100</h3>
+        <p> #</p>
       </div>
     </div>
 
     <div class="projet">
       <img src="https://via.placeholder.com/300x200" alt="Projet 2">
       <div class="overlay">
-        <h3>Portfolio JS</h3>
-        <p>Animations en JavaScript natif.</p>
+        <h3>mon site web </h3>
+        <p> moina est un site web permettant </p>
+      </div>
+        <div class="projet">
+      <img src="https://via.placeholder.com/300x200" alt="Projet 2">
+      <div class="overlay">
+        <h3> mode  </h3>
+        <p> # </p>
       </div>
     </div>
   </section>
