--- a/parcours.html
+++ b/parcours.html
@@ -2,17 +2,40 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Parcours</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Mon Parcours</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <header>
     <h1>Mon Parcours</h1>
-    <nav><a href="index.html">← Retour</a></nav>
+    <nav>
+      <a href="index.html">← ACCUEIL </a>
+      <a href="projets.html">MES PROJETS </a>
+      <a href="competences.html">MES COMPETENCES</a>
+    </nav>
   </header>
 
-  <section>
-    <p>Passionné par le développement web, j’ai étudié l'informatique et travaillé sur plusieurs projets en freelance et en entreprise...</p>
+  <section id="formation">
+    <h2>Ma Formation</h2>
+    <p>Je suis #</p>
+    <ul>
+      <li>BACCALAUREAT TECHNOLOGIES - LYCEE ROGER VERLOMME (2023-2024)</li>
+      <li> BTS INFORMATIQUE - LYCCE TURGOT (2024-2026)</li>
+    </ul>
+  </section>
+
+  <section id="projets">
+    <h2>Mes experiences </h2>
+    <p>Voici quelques experiencs que j'ai eu a réalisés au cours de mon parcours </p>
+    <ul>
+      <li>
+        <strong> stage chez LCL </strong> 
+      </li>
+      <li>
+        <strong> baby sitting </strong> 
+      </li>
+    </ul>
   </section>
 </body>
 </html>
