--- a/competences.html
+++ b/competences.html
@@ -1,1 +1,80 @@
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gestion de Projets</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="container">
+    <h1>Tableau de Bord des Projets</h1>
+    <div class="project-list">
+      <div class="project" id="project1">
+        <h2>Projet 1</h2>
+        <div class="tasks" id="tasks1">
+          <div class="task" draggable="true" id="task1" ondragstart="drag(event)">
+            <p>Tâche 1 - Compétence: Développement</p>
+          </div>
+          <div class="task" draggable="true" id="task2" ondragstart="drag(event)">
+            <p>Tâche 2 - Compétence: Design</p>
+          </div>
+        </div>
+      </div>
 
+      <div class="project" id="project2">
+        <h2>Projet 2</h2>
+        <div class="tasks" id="tasks2">
+          <div class="task" draggable="true" id="task3" ondragstart="drag(event)">
+            <p>Tâche 3 - Compétence: Marketing</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Gestion de Projets</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+  <div class="container">
+    <h1>Tableau de Bord des Projets</h1>
+    <div class="project-list">
+      <div class="project" id="project1">
+        <h2>Projet 1</h2>
+        <div class="tasks" id="tasks1">
+          <div class="task" draggable="true" id="task1" ondragstart="drag(event)">
+            <p>Tâche 1 - Compétence: <span class="competence-name">Développement</span></p>
+            <img src="img/dev-icon.png" alt="Développement" class="competence-img" onclick="showInfo('Développement')">
+          </div>
+          <div class="task" draggable="true" id="task2" ondragstart="drag(event)">
+            <p>Tâche 2 - Compétence: <span class="competence-name">Design</span></p>
+            <img src="img/design-icon.png" alt="Design" class="competence-img" onclick="showInfo('Design')">
+          </div>
+        </div>
+      </div>
+
+      <div class="project" id="project2">
+        <h2>Projet 2</h2>
+        <div class="tasks" id="tasks2">
+          <div class="task" draggable="true" id="task3" ondragstart="drag(event)">
+            <p>Tâche 3 - Compétence: <span class="competence-name">Marketing</span></p>
+            <img src="img/marketing-icon.png" alt="Marketing" class="competence-img" onclick="showInfo('Marketing')">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
