--- a/parcours.html
+++ b/parcours.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <header>
-    <h1>Mon Parcours</h1>
+    <h1> Mon Parcours</h1>
     <nav>
       <a href="index.html">← ACCUEIL </a>
       <a href="projets.html">MES PROJETS </a>
@@ -17,8 +17,8 @@
   </header>
 
   <section id="formation">
-    <h2>Ma Formation</h2>
-    <p>Je suis #</p>
+    <h2>Mes Formation</h2>
+    <p>Je suis etudiante en premire année de bts informatique dont le but est de devenir plustard developpeur web ou chef de projet !</p>
     <ul>
       <li>BACCALAUREAT TECHNOLOGIES - LYCEE ROGER VERLOMME (2023-2024)</li>
       <li> BTS INFORMATIQUE - LYCCE TURGOT (2024-2026)</li>
@@ -29,11 +29,14 @@
     <h2>Mes experiences </h2>
     <p>Voici quelques experiencs que j'ai eu a réalisés au cours de mon parcours </p>
     <ul>
-      <li>
-        <strong> stage chez LCL </strong> 
+       <li>
+        <strong> mon  stage en informatique chez CGI (mai 2025-juillet 2025) </strong> 
       </li>
       <li>
-        <strong> baby sitting </strong> 
+        <strong> un stage de decouverte chez LCL (2020) </strong> 
+      </li>
+      <li>
+        <strong> baby sitting (2020-2025) </strong> 
       </li>
     </ul>
   </section>
