--- a/index.html
+++ b/index.html
@@ -7,15 +7,16 @@
 </head>
 <body>
   <header>
-    <h1>Bienvenue sur mon Portfolio</h1>
-    <p> </p>
+    <h1> Bienvenue sur mon Portfolio</h1>
+    <p> je m'appelle REINE EKOUETH 
+    etudiante en premiere année de BTS INFORMATIQUE au lycée turgot </p>
   </header>
 
   <nav>
     <ul>
-      <li><a href="parcours.html">Parcours</a></li>
-      <li><a href="competences.html">Compétences</a></li>
-      <li><a href="projets.html">Projets</a></li>
+      <li><a href="parcours.html"> Parcours</a></li>
+      <li><a href="competences.html"> Compétences</a></li>
+      <li><a href="projets.html"> Projets</a></li>
     </ul>
   </nav>
 </body>
