--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       <li><a href="projets.html"> Projets</a></li>
     </ul>
   </nav>
+ <section class="contact-info">
+    <h2> mes Contacts </h2>
+    <p>Email : <a href="#">reineekoueth@gmail.com </a></p>
+    <p>Téléphone : <a href="#">+33 6 34 62 30 12 </a></p>
+  </section>
  
 </body>
 </html>
