--- a/parcours.html
+++ b/parcours.html
@@ -11,14 +11,14 @@
     <h1> Mon Parcours</h1>
     <nav>
       <a href="index.html">← ACCUEIL </a>
-      <a href="projets.html">MES PROJETS </a>
-      <a href="competences.html">MES COMPETENCES</a>
+      <a href="projets.html"> MES PROJETS </a>
+      <a href="competences.html"> MES COMPETENCES</a>
     </nav>
   </header>
 
   <section id="formation">
     <h2>Mes Formation</h2>
-    <p>Je suis etudiante en premire année de bts informatique dont le but est de devenir plustard developpeur web ou chef de projet !</p>
+    <p>Actuellement etudiante en première année de bts informatique dont l'objectif devenir plustad dévéloppeur web ou chef de projet !</p>
     <ul>
       <li>BACCALAUREAT TECHNOLOGIES - LYCEE ROGER VERLOMME (2023-2024)</li>
       <li> BTS INFORMATIQUE - LYCCE TURGOT (2024-2026)</li>
