--- a/competences.html
+++ b/competences.html
@@ -4,8 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>mes  Projets</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
   <a href="index.html" > acceuil </a>
+  <a href="competences.html"> mes competences  </a>
 </head>
 <body>
   <div class="container">
@@ -14,7 +15,7 @@
        <div class="project" id="project1">
          <h2> jeu nombre 100 </h2>
          <p> le </p>
-         <a href="" > </a>
+         <a href=""  class="clique"> projets jeu  </a>
        </div>
       </div>
       <div class="project" id="project2">
