--- a/competences.html
+++ b/competences.html
@@ -6,23 +6,37 @@
   <title>mes  Projets</title>
   <link rel="stylesheet" href="style.css">
   <a href="index.html" > acceuil </a>
-  <a href="competences.html"> mes competences  </a>
-</head>
-<body>
-  <div class="container">
-    <h1>Tableau  des Projets</h1>
-    <div class="project-list">
-       <div class="project" id="project1">
-         <h2> jeu nombre 100 </h2>
-         <p> le </p>
-         <a href=""  class="clique"> projets jeu  </a>
-       </div>
-      </div>
-      <div class="project" id="project2">
-          <h2> projets mode </h2>
-          <p> </p>
-           <a href = "" > </a>
-         </div>
-  </div> 
+  <a href="projets.html"> mes projets </a>
+  
+</head><section id="skills">
+  <h2>Mes Compétences</h2>
+  <div class="skills-grid">
+    <div class="skill">
+      <img src="images/html.png" alt="HTML">
+      <h3>HTML</h3>
+    </div>
+    <div class="skill">
+      <img src="images/css.png" alt="CSS">
+      <h3>CSS</h3>
+    </div>
+    <div class="skill">
+      <img src="images/js.png" alt="JavaScript">
+      <h3>JavaScript</h3>
+    </div>
+    <div class="skill">
+      <img src="php.png" alt="php">
+      <h3>PHP</h3>
+    </div>
+    <div class="skill">
+      <img src="python.jpg" alt="PYTHON">
+      <h3>PYTHON</h3>
+    </div>
+    <div class="skill">
+      <img src="images/wordpress.png" alt="WordPress">
+      <a href="#" alt="worlpress" class="clique"> ma page worlpress </a>
+      <h3>WordPress</h3>
+    </div>
+  </div>
+</section>
 </body>
 </html>
