--- a/competences.html
+++ b/competences.html
@@ -33,7 +33,8 @@
     </div>
     <div class="skill">
       <img src="images/wordpress.png" alt="WordPress">
-      <a href="#" alt="worlpress" class="clique"> ma page worlpress </a>
+      <a href="#" alt="worlpress" > ma page worlpress </a>
+      <button class="clique "> Cliquez ici </button>
       <h3>WordPress</h3>
     </div>
   </div>
