--- a/competences.html
+++ b/competences.html
@@ -12,30 +12,29 @@
   <h2>Mes Compétences</h2>
   <div class="skills-grid">
     <div class="skill">
-      <img src="images/html.png" alt="HTML">
-      <h3>HTML</h3>
+      <img src="#">
+      <h3>MYSQL </h3>
     </div>
     <div class="skill">
-      <img src="images/css.png" alt="CSS">
-      <h3>CSS</h3>
-    </div>
-    <div class="skill">
-      <img src="images/js.png" alt="JavaScript">
+      <img src="java.png">
       <h3>JavaScript</h3>
     </div>
     <div class="skill">
       <img src="php.png" alt="php">
       <h3>PHP</h3>
     </div>
+      <div class="skill">
+      <img src="#">
+      <h3>HTML/CSS</h3>
+    </div>
     <div class="skill">
-      <img src="python.jpg" alt="PYTHON">
+      <img src="python.jpg">
       <h3>PYTHON</h3>
     </div>
     <div class="skill">
       <img src="images/wordpress.png" alt="WordPress">
-      <a href="#" alt="worlpress" > ma page worlpress </a>
+      <a href="#" > ma page worlpress </a>
       <button class="clique "> Cliquez ici </button>
-      <h3>WordPress</h3>
     </div>
   </div>
 </section>
