--- a/competences.html
+++ b/competences.html
@@ -12,7 +12,7 @@
   <h2>Mes Compétences</h2>
   <div class="skills-grid">
     <div class="skill">
-      <img src="#">
+      <img src="mysql.png">
       <h3>MYSQL </h3>
     </div>
     <div class="skill">
@@ -24,7 +24,7 @@
       <h3>PHP</h3>
     </div>
       <div class="skill">
-      <img src="#">
+      <img src="HTML.jpg">
       <h3>HTML/CSS</h3>
     </div>
     <div class="skill">
@@ -33,7 +33,7 @@
     </div>
     <div class="skill">
       <img src="images/wordpress.png" alt="WordPress">
-      <a href="#" > ma page worlpress </a>
+      <a href="https://port0243.wordpress.com/qui-suis-je/" > ma page worlpress </a>
       <button class="clique "> Cliquez ici </button>
     </div>
   </div>
