--- a/Projets.html
+++ b/Projets.html
@@ -16,8 +16,11 @@
       <img src="#" alt="Projet jeu ">
       <div class="overlay">
         <h3> monbre de 100</h3>
-        <p> #</p>
-      </div>
+        <p>Le jeu « Devine le Nombre » est un jeu interactif, amusant et facile à comprendre, où l’objectif est de deviner un nombre mystère sélectionné aléatoirement par le système. Pour ce faire, l’utilisateur fait des propositions,
+          et le système indique si le nombre proposé est trop élevé, trop bas ou exact. Le but du jeu est de découvrir
+          ce nombre secret dans les plus brefs délais, en affinant ses choix au fur et à mesure des indices fournis </p>
+         <a href="" > </a>
+    </div>
     </div>
 
     <div class="projet">
@@ -27,7 +30,7 @@
         <p> moina est un site web permettant </p>
       </div>
         <div class="projet">
-      <img src="https://via.placeholder.com/300x200" alt="Projet 2">
+      <img src="#">
       <div class="overlay">
         <h3> mode  </h3>
         <p> # </p>
