--- a/competences.html
+++ b/competences.html
@@ -33,7 +33,7 @@
     </div>
     <div class="skill">
       <img src="images/wordpress.png" alt="WordPress">
-      <a href="https://port0243.wordpress.com/qui-suis-je/" > ma page worlpress </a>
+      <a href="port0243.wordpress.com/qui-suis-je/"></a>
       <button class="clique "> Cliquez ici </button>
     </div>
   </div>
