--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   </nav>
  <section class="contact-info">
     <h2> mes Contacts </h2>
-    <p>Email : <a href="#">reineekoueth@gmail.com </a></p>
-    <p>Téléphone : <a href="#">+33 6 34 62 30 12 </a></p>
+    <p>Email : reineekoueth@gmail.com </p>
+    <p>Téléphone : +33 6 34 62 30 12 </p>
   </section>
  
 </body>
