--- a/parcours.html
+++ b/parcours.html
@@ -10,7 +10,7 @@
   <header>
     <h1> Mon Parcours</h1>
     <nav>
-      <a href="index.html">← ACCUEIL </a>
+      <a href="index.html">  ACCUEIL </a>
       <a href="projets.html"> MES PROJETS </a>
       <a href="competences.html"> MES COMPETENCES</a>
     </nav>
