--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
   <nav>
     <ul>
-      <li><a href="parcours.html"> Parcours</a></li>
-      <li><a href="competences.html"> Compétences</a></li>
-      <li><a href="projets.html"> Projets</a></li>
+      <li><a href="parcours.html">MON Parcours</a></li>
+      <li><a href="competences.html">MES Compétences</a></li>
+      <li><a href="projets.html">MES Projets</a></li>
     </ul>
   </nav>
  <section class="contact-info">
-    <h2> mes Contacts </h2>
+    <h2> Mes Contacts </h2>
     <p>Email : reineekoueth@gmail.com </p>
     <p>Téléphone : +33 6 34 62 30 12 </p>
   </section>
