--- a/competences.html
+++ b/competences.html
@@ -19,7 +19,7 @@
       <h3>JavaScript</h3>
     </div>
     <div class="skill">
-      <img src="php.png" alt="php">
+      <img src=" " alt="php">
       <h3>PHP</h3>
     </div>
       <div class="skill">
@@ -31,7 +31,7 @@
       <h3>PYTHON</h3>
     </div>
     <div class="skill">
-      <img src="images/wordpress.png" alt="WordPress">
+      <img src="" alt="WordPress">
       <a href="port0243.wordpress.com/qui-suis-je/"></a>
       <button class="clique "> Cliquez ici </button>
     </div>
