--- a/competences.html
+++ b/competences.html
@@ -19,7 +19,7 @@
       <h3>JavaScript</h3>
     </div>
     <div class="skill">
-      <img src=" " alt="php">
+      <img src="php.png" alt="php">
       <h3>PHP</h3>
     </div>
       <div class="skill">
