--- a/parcours.html
+++ b/parcours.html
@@ -17,20 +17,27 @@
   </header>
 
   <section id="formation">
-    <h2>Mes Formation</h2>
-    <p>Actuellement etudiante en première année de bts informatique dont l'objectif devenir plustad dévéloppeur web ou chef de projet !</p>
+    <h2> Mes Formation</h2>
+    <p> Actuellement etudiante en première année de bts informatique  </p>
     <ul>
-      <li>BACCALAUREAT TECHNOLOGIES - LYCEE ROGER VERLOMME (2023-2024)</li>
-      <li> BTS INFORMATIQUE - LYCCE TURGOT (2024-2026)</li>
+      <li>BACCALAUREAT TECHNOLOGIES - LYCEE ROGER VERLOMME (2023-2024) </li>
+      <p> j'ai fais un baccalaureat tecnologie en option SIG ( systeme d'information et de gestion) en section europpenne anglais </p>  
+      
+      <li> BTS INFORMATIQUE - Lycée TURGOT (2024-2026)</li>
+      <p> je fais un bts informatique option SLAM ( solution logicielle et application des metiers ) </p>
     </ul>
   </section>
-
+   <section id="certification">
+    <li>Python</li> 
+     <a> </a> 
   <section id="projets">
+    
     <h2>Mes experiences </h2>
-    <p>Voici quelques experiencs que j'ai eu a réalisés au cours de mon parcours </p>
+    <p>Voici quelques experiences que j'ai eu à réalisés au cours de mon parcours </p>
     <ul>
        <li>
         <strong> mon  stage en informatique chez CGI (mai 2025-juillet 2025) </strong> 
+         <p> </p>
       </li>
       <li>
         <strong> un stage de decouverte chez LCL (2020) </strong> 
