--- a/index.html
+++ b/index.html
@@ -12,18 +12,26 @@
     etudiante en premiere année de BTS INFORMATIQUE au lycée turgot </p>
   </header>
 
-  <nav>
-    <ul>
+  <nav> 
+    </section><ul>
       <li><a href="parcours.html">MON Parcours</a></li>
       <li><a href="competences.html">MES Compétences</a></li>
       <li><a href="projets.html">MES Projets</a></li>
     </ul>
   </nav>
  <section class="contact-info">
-    <h2> Mes Contacts </h2>
-    <p>Email : reineekoueth@gmail.com </p>
-    <p>Téléphone : +33 6 34 62 30 12 </p>
+     <h2>Contactez-moi</h2>
+       <div class="contact-cards">
+       <div class="contact-card">
+          <p>Téléphone : <a href="tel:+33634623012">+33.634.62.30.12 </a></p>
+       </div>
+       <div class="contact-card">
+         <p>Email : <a href="mailto:reineekoueth@gmail.com">reineekoueth@gmail.com</a></p>
+      </div>
+      <div class="contact-card">
+         <p>LinkedIn : <a href="" >monprofil</a></p>
+      </div>
+      </div>
   </section>
- 
-</body>
+ </body>
 </html>
