--- a/competences.html
+++ b/competences.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <a href="index.html" > acceuil </a>
-  <a href="projets.html"> mes projets </a>
+  <a href="Projets.html"> mes projets </a>
   
 </head><section id="skills">
   <h1> Mes Compétences</h1>
